--- a/CruzadeStore/templates/header.html
+++ b/CruzadeStore/templates/header.html
@@ -20,7 +20,13 @@
                         <a class="nav-link" href="/">Index <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="/create" tabindex="-1" aria-disabled="fakse">Crear registro</a>
+                        <a class="nav-link disabled" href="create" tabindex="-1" aria-disabled="false">Crear registro de empleado</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="/productos/" tabindex="-1" aria-disabled="false">Listado productos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="/productos/create" tabindex="-1" aria-disabled="false">Crear registro de producto</a>
                     </li>
                 </ul>
             </div>
