--- a/CruzadeStore/templates/footer.html
+++ b/CruzadeStore/templates/footer.html
@@ -1,7 +1,26 @@
-    </div>
-    <footer style="text-align: center; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
-        Derechos reservados 2021 - Federico Estray.
-    </footer>
 </body>
-</html>
+<footer class="footer">
 
+    <p align="center">Redes Sociales! </p>
+
+    <div class="socialbtn">   
+        <a href="https://www.twitter.com" target ="_blank">
+            <i class="fab fa-twitter-square"></i>
+        </a> 
+        <a href="https://www.facebook.com" target="_blank">
+            <i class="fab fa-facebook-square"></i>
+        </a> 
+        <a href="https://www.pinterest" target="_blank">
+            <i class="fab fa-pinterest-square"></i>
+        </a> 
+        <a href="https://www.instagram.com" target="_blank">
+            <i class="fab fa-instagram-square"></i>
+        </a> 
+        <a href="https://www.linkedin.com" target="_blank">
+            <i class="fab fa-linkedin"></i>
+        </a> 
+    </div>
+
+
+</footer>
+</html>
